--- a/package.json
+++ b/package.json
@@ -13,8 +13,9 @@
     "genkit:watch": "genkit dev -c src/ai/index.ts --watch"
   },
   "dependencies": {
-    "@genkit-ai/googleai": "^1.0.0",
-    "@genkit-ai/next": "^1.0.0",
+    "@genkit-ai/firebase": "1.19.2",
+    "@genkit-ai/googleai": "1.19.2",
+    "@genkit-ai/next": "1.19.2",
     "@hookform/resolvers": "^4.1.3",
     "@radix-ui/react-accordion": "^1.2.3",
     "@radix-ui/react-alert-dialog": "^1.1.6",
@@ -43,7 +44,7 @@
     "date-fns": "^3.6.0",
     "embla-carousel-react": "^8.6.0",
     "firebase": "^11.9.1",
-    "genkit": "^1.0.0",
+    "genkit": "1.19.2",
     "lucide-react": "^0.475.0",
     "mqtt": "^5.7.0",
     "next": "15.3.3",
